examples/typeError/typeErrorInTermDest1.lcp
Nat = Data(X)< Zero () | Succ X >
NatList = Record(X){ .head : Nat | .tail : X }

f : Nat -> NatList
f x = .tail (.tail x)
